# spark-etl-snowflake

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: pipeline_config.yaml
config/env/: dev.yaml  prod.yaml
config/schemas/: inventory.json  product_reviews.json  raw_materials.json
scripts/: submit_emr_job.sh
src/extractors/: postgres_extractor.py  s3_extractor.py
src/loaders/: snowflake_loader.py
src/transformers/: base_transformer.py  business_transforms.py
src/utils/: config_loader.py  logger.py  retry.py  schema_helper.py  spark_session.py
tests/: test_utils.py
