[project]
name = "etl-pipeline"
version = "1.0.0"
description = "End-to-end ETL pipeline: PostgreSQL + S3 → EMR/PySpark → Snowflake"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
